--- a/static/index.html
+++ b/static/index.html
@@ -223,7 +223,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-offset-4 col-sm-12 col-lg-8">
+                    <div class="col-lg-offset-3 col-sm-12 col-lg-8">
                         <form class='rd-mailform' method="post" action="bat/rd-mailform.php">
                             <div class="form-group">
                                 <label class="form-label" data-add-placeholder for="Deposit">Your deposit:</label>
@@ -232,8 +232,10 @@
                                             data-constraints="@NotEmpty @NumbersOnly"
                                 style="background-color: white;"/>
                             </div>
-                            <a  onclick="Calculate();" class="btn btn-md btn-success" style="    margin-left: 20px;">
+                            <a  onclick="Calculate();" class="btn btn-md btn-success" style="    margin-left: 10px;">
                                 Calculate Premium</a>
+                            <a href="/checkout.html" class="btn btn-md btn-primary" style="    margin-left: 60px;">
+                                Buy Insurance</a>
                             <!--<div class="form-group btn-wr text-center text-md-left">-->
                                 <!--<button class="btn btn-success" type="submit">Submit</button>-->
 
