--- a/static/checkout.html
+++ b/static/checkout.html
@@ -5,13 +5,15 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119958037-3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() {
+            dataLayer.push(arguments);
+        }
         gtag('js', new Date());
 
         gtag('config', 'UA-119958037-3');
     </script>
 
-    <meta name="description" content="Yacht charter deposit insurance" />
+    <meta name="description" content="Yacht charter deposit insurance"/>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -70,30 +72,30 @@
                             <a href="">Home</a>
                         </li>
                         <!--<li class="dropdown">-->
-                            <!--<a href="about.html">About</a>-->
-                            <!--<ul class="dropdown-menu">-->
-                                <!--<li>-->
-                                    <!--<a href="#">-->
-                                        <!--Single-Car Insurance-->
-                                    <!--</a>-->
-                                <!--</li>-->
-                                <!--<li>-->
-                                    <!--<a href="#">-->
-                                        <!--Multi-Car Insurance-->
-                                    <!--</a>-->
-                                <!--</li>-->
-                                <!--<li>-->
-                                    <!--<a href="#">-->
-                                        <!--Black Box Insurance-->
-                                    <!--</a>-->
-                                <!--</li>-->
-                            <!--</ul>-->
+                        <!--<a href="about.html">About</a>-->
+                        <!--<ul class="dropdown-menu">-->
+                        <!--<li>-->
+                        <!--<a href="#">-->
+                        <!--Single-Car Insurance-->
+                        <!--</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                        <!--<a href="#">-->
+                        <!--Multi-Car Insurance-->
+                        <!--</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                        <!--<a href="#">-->
+                        <!--Black Box Insurance-->
+                        <!--</a>-->
+                        <!--</li>-->
+                        <!--</ul>-->
                         <!--</li>-->
                         <li>
                             <a href="services.html">Services</a>
                         </li>
                         <!--<li>-->
-                            <!--<a href="news.html">News</a>-->
+                        <!--<a href="news.html">News</a>-->
                         <!--</li>-->
                         <li class="active">
                             <a href="contacts.html">Contacts</a>
@@ -145,113 +147,81 @@
                     <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-0 ">
                         <h4>Details</h4>
 
-                        <form class='rd-mailform' method="post" action="bat/rd-mailform.php">
-                            <!-- RD Mailform Type -->
-                            <input type="hidden" name="form-type" value="contact"/>
-                            <!-- END RD Mailform Type -->
+                        <form class='rd-mailform' action="" method="post" role="form">
 
                             <div class="form-group">
-                                <label class="form-label" data-add-placeholder for="mailform-input-name">* Your full name here:</label>
-                                <input id="mailform-input-name"
-                                       type="number"
-                                       name="name"
-                                       data-constraints="@NotEmpty @NumbersOnly"/>
-
+                                <label class="form-label" data-add-placeholder for="name">Your First name here</label>
+                                <input id="name" type="text" name="name" data-constraints="@NotEmpty"/>
                             </div>
-
                             <div class="form-group">
-                                <label class="form-label" data-add-placeholder for="mailform-input-email">* Enter your e-mail:</label>
-                                <input id="mailform-input-email"
-                                       type="text"
-                                       name="email"
-                                       data-constraints="@NotEmpty @Email"/>
-
+                                <label class="form-label" data-add-placeholder for="surname">Surname</label>
+                                <input type="text" id="surname" name="surname" data-constraints="@NotEmpty"/>
                             </div>
-
                             <div class="form-group">
-                                <label class="form-label" data-add-placeholder for="mailform-input-phone">Your deposit:</label>
-                                <input id="mailform-input-phone"
-                                       type="number"
-                                       name="phone"
-                                       data-constraints="@NumbersOnly"/>
+                                <label class="form-label" data-add-placeholder for="email">Email</label>
+                                <input type="text" class="form-control" id="email" name="email"/>
                             </div>
-                            <div class="form-group btn-wr text-center text-md-left">
-                                <button class="btn btn-success" type="submit">Submit</button>
-                                <p>* Required Fields</p>
-                                <div class="mfInfo"></div>
+                            <br>
+                            <div class="form-group">
+                                <label class="form-label" data-add-placeholder for="phone">Phone</label>
+                                <input type="text" class="form-control" id="phone" name="phone"/>
+                            </div>
+                            <div class="form-group">
+                                <label class="form-label" data-add-placeholder for="address">Address</label>
+                                <input type="text" class="form-control" id="address" name="address"/>
+                            </div>
+                            <div class="form-group">
+                                <label class="form-label" data-add-placeholder for="country">Country of
+                                    residence</label>
+                                <input type="text" class="form-control" id="country" name="country"/>
+                            </div>
+                            <div class="form-group">
+                                <label class="form-label" data-add-placeholder for="companyName">Charter
+                                    company</label>
+                                <input type="text" class="form-control" id="companyName" name="companyName"/>
+                            </div>
+                            <div class="form-group">
+                                <label class="form-label" data-add-placeholder for="sailingBase">Sailing area</label>
+                                <input type="text" class="form-control" id="sailingBase" name="sailingBase"
+                                />
+                            </div>
+                            <div class="form-group">
+                                <label class="form-label" data-add-placeholder for="startDate">Charter travel
+                                    start</label>
+                                <input id="startDate" type="text" name="startDate"/>
+                            </div>
+                            <div class="form-group">
+                                <label class="form-label" data-add-placeholder for="endDate">Charter travel
+                                    finish</label>
+                                <input type="text" class="form-control" id="endDate" name="endDate"/>
+                            </div>
+                            <div class="form-group">
+                                <label data-add-placeholder for="deposit">Deposit</label>
+                                <input type="number" class="form-control" id="deposit" name="deposit"/>
+                            </div>
 
-                            </div>
+                            <br>
+                            <center>
+                                <button type="submit" class="btn btn-success">Submit</button>
+                            </center>
                         </form>
-
-
-                            <form  class='rd-mailform' action="" method="post" role="form">
-        {{ form.csrf }}
-        <div class="form-group">
-            <label class="form-label" data-add-placeholder for="mailform-input-name">* Your full name here:</label>
-                                <input id="name"
-                                       type="text"
-                                       name="name"
-                                       data-constraints="@NotEmpty"/>
-            <br>
-          <label for="surname">Surame:</label>
-          <input type="text" class="form-control" id="surname" name="surname" placeholder="Surname?">
-	    <br>
-	  <label for="email">Email:</label>
-	  <input type="text" class="form-control" id="email" name="email" placeholder="Your email address.">
-	    <br>
-	  <label for="phone">Phone:</label>
-	  <input type="text" class="form-control" id="phone" name="phone" placeholder="Phone number">
-            <br>
-	  <label for="phone">Address:</label>
-	  <input type="text" class="form-control" id="address" name="address" placeholder="Home address">
-       <br>
-      <label for="phone">Country of residence:</label>
-	  <input type="text" class="form-control" id="country" name="country" placeholder="Country name">
-            <div class="form-group">
-                  <label for="name">Charter comapany:</label>
-          <input type="text" class="form-control" id="companyName" name="companyName" placeholder="Company name">
-                <label for="name">Sailing area:</label>
-          <input type="text" class="form-control" id="sailingBase" name="sailingBase" placeholder="Charter base location">
-            <br>
-            </div>
-
-                <label class="form-label" data-add-placeholder for="startDate">Charter travel start</label>
-                                <input id="startDate"
-                                       type="date"
-                                       name="startDate"/>
-
-                <label for="name">Charter travel finish:</label>
-          <input type="date" class="form-control" id="endDate" name="endDate" placeholder="Date">
-
-             <label for="name">Deposit:</label>
-          <input type="number" class="form-control" id="deposit" name="deposit" placeholder="Deposit amount">
-
-	</div>
-        <br>
-        <center>
-          <button type="submit" class="btn btn-success">Submit</button>
-        </center>
-      </form>
-      <br>
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-        {% for message in messages %}
-            {% if "Error" not in message[1]: %}
-                <div class="alert alert-info">
-                <strong>Success! </strong> {{ message[1] }}
-                </div>
-            {% endif %}
-            {% if "Error" in message[1]: %}
-                <div class="alert alert-danger">
-                <strong>Error: </strong> {{ message[1] }}
-                </div>
-            {% endif %}
-        {% endfor %}
-            {% endif %}
-        {% endwith %}
-
-
-
+                        <br>
+                        {% with messages = get_flashed_messages(with_categories=true) %}
+                            {% if messages %}
+                                {% for message in messages %}
+                                    {% if "Error" not in message[1]: %}
+                                        <div class="alert alert-info">
+                                            <strong>Success! </strong> {{ message[1] }}
+                                        </div>
+                                    {% endif %}
+                                    {% if "Error" in message[1]: %}
+                                        <div class="alert alert-danger">
+                                            <strong>Error: </strong> {{ message[1] }}
+                                        </div>
+                                    {% endif %}
+                                {% endfor %}
+                            {% endif %}
+                        {% endwith %}
 
 
                     </div>
@@ -324,8 +294,10 @@
                     <div class="col-sm-6 col-md-3">
                         <h6 class="fw-b">About</h6>
 
-                        <p>“PanPan Insurance” is a Netherlands based tech insurance company that was set up 2017 to specialise in yacht
-                            charter deposit insuranes. In 2018 we launched the first Multi Trip Insurance cover which allows two or more
+                        <p>“PanPan Insurance” is a Netherlands based tech insurance company that was set up 2017 to
+                            specialise in yacht
+                            charter deposit insurances. In 2018 we launched the first Multi Trip Insurance cover which
+                            allows two or more
                             trips to insure on one policy and get a discount on the overall price. In 2019
                             we launched our Black Box Insurance product LittleBox which helps safe skippers to receive
                             discounts based on their sailing style.</p>
